# spritzer-tweets

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
notebooks/: exploratorio.ipynb  exploratory.ipynb  fetch user timeline.ipynb
