[tool.poetry]
name = "spritzer-tweets"
version = "0.1.0"
description = ""
authors = ["Juan Manuel Pérez <jmperez.85@gmail.com>"]
readme = "README.md"
packages = [{include = "spritzer_tweets"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
fire = "*"
pymongo = "3.10.1"
tqdm = "*"
tweepyrate = {path="./tweepyrate", develop=true}
pysentimiento = "^0.5.2"
datasets = "^2.7.1"
orjson = "^3.8.2"
aiofiles = "^22.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
